unpackaged/main/default/objects/Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>