unpackaged/main/default/objects/Log__c/fields/Timer__c.field-meta.xml
<CustomField>
    <fullName>Timer__c</fullName>
    <label>Timer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>