unpackaged/main/default/objects/Log__c/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>NAME</columns>
    <columns>Job_Type__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Message__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>